[package]
name = "observer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
futures-util = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
